# PxModRim

./: .codacy.yml  .gitignore  .gitmodules  AGENTS.md  LICENSE  ModsConfig.xml  README.md  _dummy_pxmodrim.py  justfile  pyproject.toml  reference.html  test.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codacy.yml
cf-workers/: README.md  worker.js
companion-mods/: AGENTS.md
packaging/: build.py  entrypoint.py
packaging/linux/: pxmodrim.desktop
plans/: ongoing_001.md
rimsort-original/: .gitmodules  pyproject.toml
rimsort-original/app/controllers/: app_controller.py  main_content_controller.py  metadata_controller.py  mods_panel_controller.py
rimsort-original/app/models/: animations.py
rimsort-original/app/models/metadata/: metadata_factory.py  metadata_mediator.py
rimsort-original/app/services/: instance_service.py
rimsort-original/app/utils/: event_bus.py  update_utils.py  xml.py
rimsort-original/app/utils/steam/: availability.py  workshop_utils.py
rimsort-original/app/utils/steam/webapi/: wrapper.py
rimsort-original/app/views/: acf_log_reader.py  main_content_panel.py  main_window.py  mod_info_panel.py  mod_list_delegate.py  mod_list_icons.py  mod_list_model.py  mod_list_proxy.py  mod_list_view.py  mods_panel.py
rimsort-original/tests/views/: test_main_content_run.py
rimsort-original/themes/Modern/: style.qss
rimsort-original/themes/Nature/: style.qss
rimsort-original/themes/RimPy/: style.qss
rimsort-original/themes/SunSet/: style.qss
rimsort-original/themes/Wood/: style.qss
scripts/: check-deps.py  migrate-tree.py
src/pxmodrim/: __main__.py  _app.py
src/pxmodrim/_compat/: __init__.py  config.py  dialogs.py  mods_config.py  msgspec_hooks.py  mspec_hooks.py  utils.py  xml.py
src/pxmodrim/checker/: checker.py  databases.py  graph.py  issues.py  models.py  sort.py
src/pxmodrim/core/: __init__.py  config.py  constants.py  context.py  events.py  loading.py  mod_service.py  mods_config.py  msgspec_hooks.py  plugin.py  profiler.py  structures.py  utils.py  xml.py
src/pxmodrim/core/checker/: checker.py  databases.py  graph.py  issues.py  models.py  sort.py
src/pxmodrim/core/models/view/: sidebar.py  (+1 more)
src/pxmodrim/core/providers/: __init__.py  base.py  core.py  local.py  steam_cmd.py
src/pxmodrim/core/services/: diagnostics_service.py  download_proto.py  game_launcher.py  mod_discovery.py  sort_service.py  steam_cmd_service.py  steam_cmd_worker.py
src/pxmodrim/core/sort/: __init__.py  community.py  community_service.py  config.py  exceptions.py  models.py  progress.py  tiers.py
src/pxmodrim/models/metadata/: parsing.py  structures.py
src/pxmodrim/models/view/: diagnostics.py  sidebar.py
src/pxmodrim/services/: diagnostics_service.py  mod_discovery.py  sort_service.py
src/pxmodrim/sort/: __init__.py  community.py  community_service.py  config.py  graph.py  models.py  service.py  sorter.py  tiers.py  topological.py
src/pxmodrim/ui/: about_panel.py  config.py  constants.py  main_window.py  menu_bar.py  mod_info_panel.py  mod_list_model.py  mod_list_panel.py  palette.py  progress.py  settings_panel.py  sidebar_model.py  sidebar_panel.py  style.qss  theme.py  ui_prefs.py
src/pxmodrim/ui/components/: Header.qml  IconRail.qml  __init__.py  accordion_section.py  banner_widget.py  button.py  chip.py  description_renderer.py  dialogs.py  header_controller.py  header_panel.py  icon_button.py  icon_tab_widget.py  icons.py  procedural_preview.py  progress_dialog.py  responsive_meta_grid.py  svg_provider.py  title_bar.py  toast.py  unity_rich_text.py  view_rail_panel.py
src/pxmodrim/ui/models/: mod_list_model.py  mod_list_proxy_model.py  sidebar_model.py
src/pxmodrim/ui/panels/: ModList.qml  TimeAnalytics.qml  about_panel.py  mod_info_panel.py  mod_list_panel.py  settings_panel.py  sidebar_panel.py  time_analytics_panel.py
src/pxmodrim/ui/plugins/: __init__.py  steam_cmd_plugin.py
src/pxmodrim/ui/qml/: Header.qml  ModList.qml  Sidebar.qml
src/pxmodrim/ui/theme/: qml_theme.py  style.qss
src/pxmodrim/ui/views/: __init__.py  base.py  mods_view.py  steam_workshop_view.py
src/pxmodrim/ui/window/: main_window.py  menu_bar.py
tests/test_checker/: test_checker.py  test_graph.py  test_issues.py
tests/test_compat/: test_config.py
tests/test_metadata/: test_mods_config.py  test_parsing.py  test_startup_impact.py  test_structures.py
tests/test_services/: test_sort_service.py  test_steam_cmd_service.py
tests/test_sort/: test_tier_order.py
tests/test_ui/: test_accordion_section.py  test_icon_tab_widget.py  test_mod_list_model.py  test_mod_list_proxy_model.py  test_unity_rich_text.py  test_views.py
(+17 files in other folders)
