[project]
name = "pxmodrim"
description = "A mod manager for RimWorld."
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "msgspec>=0.21.1",
    "natsort>=8.4.0",
    "networkx>=3.6.1",
    "pyside6>=6.11.1,<6.12",
    "qasync>=0.28.0",
    "toposort>=1.10",
    "ttimer>=0.0.2",
]

[project.gui-scripts]
pxmodrim = "pxmodrim.__main__:main"

[dependency-groups]
dev = [
    "nuitka>=2.6.7",
    "pydeps>=3.0.6",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "ruff>=0.15.22",
]

[tool.uv]
package = true
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["rimsort-original"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--no-qt-log",
]
pythonpath = 'src'
testpaths = ['tests']

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
exclude = ['rimsort-original']

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # allowing assert
    "D",    # no docs
    "F841", # unused local vars
]
[tool.bandit]
targets = ["src"]
exclude_dirs = ['tests']

[tool.bandit.assert_used]
skips = ['tests/**/*.py']
